fixed text overflow in cards

--- a/styles/_posts_container.scss
+++ b/styles/_posts_container.scss
@@ -24,7 +24,7 @@
 			p {
 				margin: 0;
 				opacity: 0.6;
-				line-height: 1.5;
+				line-height: 2;
 				text-overflow: ellipsis;
 				overflow: hidden;
 				display: -webkit-box;
