--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,18 @@ a {
   --second-accent-color: hsl(269, 85%, 66%);
 }
 
+:root {
+  --background-start-rgb: rgb(222, 240, 203);
+  --background-end-rgb: rgba(165, 185, 250, 0.9);
+  --secondary-color: rgb(254, 254, 254);
+  --navbar-color: rgb(254, 254, 254);
+  --text-color: rgb(0, 0, 0);
+  --shadow-color: rgba(229, 229, 229, 0.203);
+  --border-color: rgb(230, 230, 230);
+  --first-accent-color: hsl(138, 85%, 66%);
+  --second-accent-color: hsl(207, 85%, 66%);
+}
+
 html,
 body {
   max-width: 100vw;
@@ -458,7 +470,7 @@ nav .dropdown ul li button {
 .posts-container .cards-grid .card p {
   margin: 0;
   opacity: 0.6;
-  line-height: 1.5;
+  line-height: 2;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
